--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Lint markdown
-        run: npx markdownlint-cli ./*.md
+        run: npx markdownlint-cli ./*.md --fix
         env:
           CI: true
 
@@ -27,3 +27,19 @@ jobs:
         run: npx yaspeller -l ru ./*.md
         env:
           CI: true
+
+      - name: Test & Generate
+        run: npm test && npm start
+        env:
+          CI: true
+
+      - name: Commit files
+        run: |
+          git config --local user.email "wiki[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git commit -am "Generate README.md"
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
