Add content generator #3

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,7 +29,10 @@ jobs:
           CI: true
 
       - name: Test & Generate
-        run: npm test && npm start
+        run: |
+            npm i
+            npm test
+            npm start
         env:
           CI: true
 
