--- a/.yaspellerrc
+++ b/.yaspellerrc
@@ -15,9 +15,16 @@
   "dictionary": [
         "XPшник.*",
         "баг.*",
+        "фич.*",
+        "Физерс.*",
+        "Джеффрис.*",
         "Бернхардт.*",
+        "Хейлсберг.*",
         "Бодарт.*",
-        "Бэк.*",
+        "Лобин.*",
+        "90х",
+        "2000х",
+        "[Б,б]эк.*",
         "верхнеуровнев.*",
         "коммит.*",
         "коммуницирующи.*",
