--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "lint": "npx markdownlint-cli ./*.md --fix",
     "spell": "npx yaspeller -l ru ./*.md",
+    "check": "npm run lint && npm run spell",
     "test": "npx mocha",
     "start": "node index.js"
   },
