Add SOLID article #5

--- a/.yaspellerrc
+++ b/.yaspellerrc
@@ -13,26 +13,30 @@
   "ignoreCapitalization": true,
   "ignoreText": [],
   "dictionary": [
-        "XPшник.*",
-        "баг.*",
-        "фич.*",
-        "Физерс.*",
-        "Джеффрис.*",
-        "Бернхардт.*",
-        "Хейлсберг.*",
-        "Бодарт.*",
-        "Лобин.*",
         "90х",
         "2000х",
+        "XPшник.*",
+        "баг.*",
+        "ДеМарко",
+        "Джеффрис.*",
+        "Бернхардт.*",
+        "Бодарт.*",
         "[Б,б]эк.*",
         "верхнеуровнев.*",
+        "клудж.*",
         "коммит.*",
         "коммуницирующи.*",
+        "Лобин.*",
+        "Мейлир.*",
         "мокист.*",
         "пайплайн.*",
+        "рефакторинг.*",
         "[С,с]амотестирующ.*",
+        "Хейлсберг.*",
         "Хайнемейер.*",
         "Хэнссон.*",
-        "Филдс.*"
+        "Физерс.*",
+        "Филдс.*",
+        "фич.*"
   ]
 }
