--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -35,7 +35,8 @@ jobs:
         run: |
           git config --local user.email "wiki[bot]@users.noreply.github.com"
           git config --local user.name "wiki[bot]"
-          git commit -am "Generate README.md"
+          git add -A
+          git diff-index --quiet HEAD || git commit -m 'Generate index'
 
       - name: Push changes
         uses: ad-m/github-push-action@master
