--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -36,7 +36,7 @@ jobs:
           git config --local user.email "wiki[bot]@users.noreply.github.com"
           git config --local user.name "wiki[bot]"
           git add -A
-          git diff-index --quiet HEAD || git commit -m 'Generate index'
+          git diff-index --quiet HEAD || git commit -m "Generate index"
 
       - name: Push changes
         uses: ad-m/github-push-action@master
