--- a/.yaspellerrc
+++ b/.yaspellerrc
@@ -21,8 +21,10 @@
         "Джеффрис.*",
         "Бернхардт.*",
         "Бодарт.*",
+        "бóльш.*",
         "[Б,б]эк.*",
         "верхнеуровнев.*",
+        "виджет.*",
         "клудж.*",
         "коммит.*",
         "коммуницирующи.*",
