--- a/.yaspellerrc
+++ b/.yaspellerrc
@@ -38,6 +38,7 @@
         "Хайнемейер.*",
         "Хэнссон.*",
         "Физерс.*",
+        "фикстур.*",
         "Филдс.*",
         "фич.*"
   ]
