--- a/.yaspellerrc
+++ b/.yaspellerrc
@@ -23,6 +23,7 @@
         "Бодарт.*",
         "бóльш.*",
         "[Б,б]эк.*",
+        "Влиссидес*",
         "верхнеуровнев.*",
         "виджет.*",
         "клудж.*",
