--- a/.yaspellerrc
+++ b/.yaspellerrc
@@ -23,7 +23,7 @@
         "Бодарт.*",
         "бóльш.*",
         "[Б,б]эк.*",
-        "Влиссидес*",
+        "Влиссидес.*",
         "верхнеуровнев.*",
         "виджет.*",
         "клудж.*",
