--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "colors": "^1.4.0",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "mustache": "^4.1.0"
   },
   "dependencies": {}
 }
