Fix some errors

--- a/.yaspellerrc
+++ b/.yaspellerrc
@@ -17,30 +17,59 @@
         "2000х",
         "XPшник.*",
         "баг.*",
-        "ДеМарко",
-        "Джеффрис.*",
         "Бернхардт.*",
         "Бодарт.*",
         "бóльш.*",
         "[Б,б]эк.*",
-        "Влиссидес.*",
+        "Боссавит.*",
         "верхнеуровнев.*",
+        "видеотренинг.*",
         "виджет.*",
+        "Влиссидес.*",
+        "Вонг.*",
+        "воркшоп.*",
+        "Вуди",
+        "Гайо",
+        "Декстер.*",
+        "ДеМарко",
+        "депло.*",
+        "Джеффрис.*",
+        "Додзё",
+        "Ён.*",
+        "Йодер.*",
         "клудж.*",
+        "кодинг.*",
         "коммит.*",
         "коммуницирующи.*",
+        "Лайтсмит.*",
+        "легаси",
         "Лобин.*",
+        "Лучиан.*",
+        "Льюэллин.*",
         "Мейлир.*",
+        "моббинг.*",
         "мокист.*",
+        "опенспейс.*",
         "пайплайн.*",
+        "переговорк.*",
+        "Поппендик.*",
+        "ревью",
+        "Репеннинг.*",
+        "ретроспектив.*",
         "рефакторинг.*",
+        "ротиру.*",
+        "самоорганизованн.*",
         "[С,с]амотестирующ.*",
+        "Стерман.*",
+        "Таймлапс.*",
         "Хейлсберг.*",
         "Хайнемейер.*",
         "Хэнссон.*",
+        "Фалько",
         "Физерс.*",
         "фикстур.*",
         "Филдс.*",
-        "фич.*"
+        "фич.*",
+        "флипчарт.*"
   ]
 }
