--- a/.yaspellerrc
+++ b/.yaspellerrc
@@ -36,6 +36,7 @@
         "Джеффрис.*",
         "Додзё",
         "Ён.*",
+        "инкрементальн.*",
         "Йодер.*",
         "клудж.*",
         "кодинг.*",
