--- a/.yaspellerrc
+++ b/.yaspellerrc
@@ -62,6 +62,7 @@
         "самоорганизованн.*",
         "[С,с]амотестирующ.*",
         "Стерман.*",
+        "стейкхолд.*",
         "Таймлапс.*",
         "Хейлсберг.*",
         "Хайнемейер.*",
