--- a/.yaspellerrc
+++ b/.yaspellerrc
@@ -36,6 +36,7 @@
         "Джеффрис.*",
         "Додзё",
         "Ён.*",
+        "инкрементальн.*",
         "Йодер.*",
         "клудж.*",
         "кодинг.*",
@@ -61,6 +62,7 @@
         "самоорганизованн.*",
         "[С,с]амотестирующ.*",
         "Стерман.*",
+        "стейкхолд.*",
         "Таймлапс.*",
         "Хейлсберг.*",
         "Хайнемейер.*",
