Improve Cucumber book #50

--- a/.yaspellerrc
+++ b/.yaspellerrc
@@ -16,6 +16,7 @@
         "90х",
         "2000х",
         "XPшник.*",
+        "Аджич.*",
         "баг.*",
         "Бернхардт.*",
         "Бодарт.*",
@@ -38,6 +39,7 @@
         "Ён.*",
         "инкрементальн.*",
         "Йодер.*",
+        "Криспин",
         "клудж.*",
         "кодинг.*",
         "коммит.*",
@@ -62,7 +64,7 @@
         "самоорганизованн.*",
         "[С,с]амотестирующ.*",
         "Стерман.*",
-        "стейкхолд.*",
+        "стейкхолдер.*",
         "Таймлапс.*",
         "Хейлсберг.*",
         "Хайнемейер.*",
