Fix build and some errors

--- a/.yaspellerrc
+++ b/.yaspellerrc
@@ -16,6 +16,7 @@
         "90х",
         "2000х",
         "XPшник.*",
+        "автотест.*",
         "Аджич.*",
         "баг.*",
         "Бернхардт.*",
