Добавлены термины в словарь - статья про код ревью

--- a/.yaspellerrc
+++ b/.yaspellerrc
@@ -18,6 +18,7 @@
         "XPшник.*",
         "автотест.*",
         "Аджич.*",
+        "антипаттерн",
         "баг.*",
         "Бернхардт.*",
         "Бодарт.*",
@@ -54,13 +55,29 @@
         "моббинг.*",
         "мокист.*",
         "опенспейс.*",
+        "Отрефакторите",
+        "отрефакторить",
         "пайплайн.*",
         "переговорк.*",
+        "полузаконченные",
+        "полузаконченный",
         "Поппендик.*",
+        "процессе рефакторинга",
         "ревью",
+        "ревьювер",
+        "Ревьювер",
+        "ревьювера",
+        "ревьюверам",
+        "ревьювере",
+        "ревьюверов",
+        "ревьювером",
+        "ревьюверу",
+        "Ревьюверу",
+        "ревьюверы",
         "Репеннинг.*",
         "ретроспектив.*",
         "рефакторинг.*",
+        "рефакторят",
         "ротиру.*",
         "самоорганизованн.*",
         "[С,с]амотестирующ.*",
