Оптимизируем словарь, убирая склонения слова (#64)
* Оптимизируем словарь, убирая склонения слова

* Update .yaspellerrc

--- a/.yaspellerrc
+++ b/.yaspellerrc
@@ -64,16 +64,7 @@
         "Поппендик.*",
         "процессе рефакторинга",
         "ревью",
-        "ревьювер",
-        "Ревьювер",
-        "ревьювера",
-        "ревьюверам",
-        "ревьювере",
-        "ревьюверов",
-        "ревьювером",
-        "ревьюверу",
-        "Ревьюверу",
-        "ревьюверы",
+        "ревьювер.*",
         "Репеннинг.*",
         "ретроспектив.*",
         "рефакторинг.*",
