--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "private": true,
   "scripts": {
     "lint": "npx markdownlint-cli@0.43.0 ./docs/*.md --fix",
-    "spell": "npx yaspeller@10.0.1 -l ru ./docs/*.md",
-    "check": "npm run lint",
+    "spell": "npx cspell@8.16.0 ./docs/*.md --cache --show-suggestions --no-progress",
+    "check": "npm run lint && npm run spell",
     "test": "npx jest",
     "start": "node index.js"
   },
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/Technical-Excellence-Russia/wiki#readme",
   "devDependencies": {
+    "@cspell/dict-ru_ru": "2.2.4",
     "@jest/types": "^29.6.3",
     "colors": "^1.4.0",
     "jest": "^29.7.0",
